src/style/layouts.scss
.content-page-wrapper {
    width: 100vw;
    height: calc(100vh - 84px);

    .left-column {
        width: 100%;
    }

    .right-column {
        display: flex;
        justify-content: center;
        align-items: flex-start;
        flex-direction: column;

        .contact-bullet-points {
            .bullet-point-group {
                display: flex;
                align-items: center;

                .icon {
                    width: 2em;
                    text-align: center;

                    a {
                        font-size: 2em;
                        color: $main;
                        text-decoration: none;
                        transition: 0.5s ease-in-out;

                        &:hover {
                            color: $dark-main;
                        }
                    }
                }

                .text {
                    font-size: 1.5em;
                    font-weight: 900;
                    margin-left: 25px;

                    a {
                        text-decoration: none;
                        color: black;
                    }
                }
            }
        }
    }
}

@media (min-width: 787px) {
    .right-column {
        padding: 100px;
    }
}

@media (max-width: 786px) {
    .content-page-wrapper {
        display: grid;
        grid-template-columns: 1fr;

        .left-column {
            width: 100%;
            height: 200px;
        }
    }
}

